[tool.poetry]
name = "GlassySnek"
version = "0.1.0"
description = ""
authors = ["Nick Franken <shnick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
scikit-learn = "0.22"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
